# base-types

./: CMakeLists.txt  base-types-config.cmake  manifest.xml
base/: CMakeLists.txt  Singleton.hpp  base-lib.pc.in  base-types.pc.in
base/samples/: DepthMap.hpp
bindings/ruby/: CMakeLists.txt
bindings/ruby/ext/base_types_ruby/: init.cpp
bindings/ruby/lib/base/: typelib_plugin.rb
src/: CMakeLists.txt
